incremental change as part of a larger frenzy of activity