@@ -1,5 +1,6 @@
 
 java \
+--add-modules net.codetojoy.example \
 --module-path mlib \
---class-path build \
+--class-path build_app \
 App
